--- a/app/views/dashboard/guilds/shared/_guild-jobs-stats.html.slim
+++ b/app/views/dashboard/guilds/shared/_guild-jobs-stats.html.slim
@@ -7,7 +7,7 @@ div class="guild-jobs-stats_container mb-1"
         div class="row"
             div class="col-6"
                 div class="guild-jobs-stat_name"
-                    p live jobs 
+                    h4 live jobs 
             div class="col-6"
                 div class="guild-jobs-stat_stat"
                     p = 20 
@@ -15,7 +15,7 @@ div class="guild-jobs-stats_container mb-1"
         div class="row"
             div class="col-6"
                 div class="guild-jobs-stat_name"
-                    p live openings 
+                    h4 live openings 
             div class="col-6"
                 div class="guild-jobs-stat_stat"
                     p = 20 
