--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -71,17 +71,20 @@
 }
 
 .guild-jobs-stat_stat{
-    padding: 1.3rem .4rem;
+    padding: 1.2rem .4rem;
     background-color: #1f3e82;
     text-align: center;
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.7rem !important;
 }
 
 .guild-jobs-stat_name{
     height: 100%; 
     display: flex;
     align-items: center;
+}
+
+.guild-jobs-stat_name h4{
     font-size: 1rem;
     font-weight: 300;
 }
