--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -1,6 +1,6 @@
 div id="dashboard_guilds-tab"
     div class="guilds-tab_header-container"
-        h3 class="dashboard_content-header" Guilds overview
+        h3 class="dashboard_content-header" Overview
     div class="container-fluid px-0"
         div class="row no-gutters"
             div class="col-12 col-md-4 dashboard_content-container--focal-left"
