--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -4,6 +4,8 @@ div id="dashboard_individual-guild-page" data-guild="#{@current_guild}"
     div class="guild_back-button-container"
         a href="/dashboard/guilds" class='guilds_back-button' 
             <i class="material-icons guilds_back-button-icon">keyboard_return</i>
+        div
+            p = render_last_updated_date_for_guild(@current_guild)
     div class="mb-4"
         div class="dashboard_content-header-container mb-1"
             h4 class="dashboard_content-header" Overview
