edit guilds header styling

--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -6,8 +6,8 @@
     padding: .5rem;
     text-align: center;
     margin-bottom: 0;
-    border-top: .3rem solid #e7ceb9;
-    border-bottom: .2rem solid #e7ceb9;
+    border-top: .3rem solid #e4e4e4;
+    // border-bottom: .2rem solid #e7ceb9;
     font-weight: 600 !important;
 }
 
