--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -23,7 +23,7 @@ div class="hires-stats_container mb-2"
             div class="col-5 d-flex justify-content-center"
                 <i class="material-icons hires-stats_icon">equalizer</i>
 p {
-class="charts_date" 
+class="charts_date mt-4" 
 id="hires-stats_date" 
 data-date="#{hires_statistics(current: true)[:date]}"
 } #{hires_statistics(current: true)[:date]}
