--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -4,20 +4,10 @@ div id="dashboard_individual-guild-page" data-guild="#{@current_guild}" data-upd
     div class="guild_back-button-container"
         a href="/dashboard/guilds" class='guilds_back-button' 
             <i class="material-icons guilds_back-button-icon">keyboard_return</i>
+    div
+        p id="guilds_last-updated-date" data-last-updated="#{UiHelper.find_by(name: 'Departments').last_updated.localtime}" = render_last_updated_date_for_guilds
+        button id="guilds_update-button" update
 
-    div class="container-fluid px-0"
-        div class="row no-gutters"
-            div class="col-12 col-md-4 dashboard_content-container--focal-left"
-                div class="dashboard_focal-content-container"
-                    h4 class="dashboard_focal-content-header" Status
-                    div
-                        p id="guilds_last-updated-date" data-last-updated="#{UiHelper.find_by(name: 'Departments').last_updated.localtime}" = render_last_updated_date_for_guilds
-                        button id="guilds_update-button" update
-            div class="col-12 col-md-8"
-                div class="dashboard_focal-content-container" 
-                    h4 class="dashboard_focal-content-header" Hires
-                    = render 'dashboard/guilds/shared/hires-per-year-control'
-                    = render 'dashboard/guilds/shared/hires-per-year-graph'
 
     div class="mb-4"
         div class="dashboard_content-header-container mb-1"
@@ -35,6 +25,18 @@ div id="dashboard_individual-guild-page" data-guild="#{@current_guild}" data-upd
                     div class="dashboard_content-container"
                         = render 'dashboard/guilds/shared/guild-jobs-stats'
 
-                        
+    div class="container-fluid px-0"
+        div class="row no-gutters"
+            / div class="col-12 col-md-4 dashboard_content-container--focal-left"
+            /     div class="dashboard_focal-content-container"
+            /         h4 class="dashboard_focal-content-header" Status
+            /         div
+            /             p id="guilds_last-updated-date" data-last-updated="#{UiHelper.find_by(name: 'Departments').last_updated.localtime}" = render_last_updated_date_for_guilds
+            /             button id="guilds_update-button" update
+            div class="col-12"
+                div class="dashboard_focal-content-container" 
+                    h4 class="dashboard_focal-content-header" Hires
+                    = render 'dashboard/guilds/shared/hires-per-year-control'
+                    = render 'dashboard/guilds/shared/hires-per-year-graph'      
     
 
