--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -10,7 +10,7 @@
     background-color: white;
     padding: .8rem;
     align-items: center;
-    border: .156rem solid #d3d3d3;
+    border: .156rem solid #eaeaea;
     color: black;
     transition: border 150ms ease-in,
                 color 150ms ease-in ;
@@ -91,6 +91,13 @@
 
 #guild_jobs-search-bar{
     width: 100%;
+    height: 2.3rem;
+    padding: .5rem;
+}
+
+::placeholder { 
+    color:grey;
+    opacity: .5; 
 }
 
 .guild_jobs-search-menu{
@@ -99,6 +106,7 @@
     max-height: 5rem;
     overflow: scroll;
     padding: 0;
+    position: absolute;
 }
 
 .guild_jobs-search-menu li{
@@ -110,6 +118,8 @@
 
 .guild_jobs-search-component{
     width: 80%;
+    // margin: 0 auto;
+    position: relative;
 }
 
 .guild_jobs-search-container{
