--- a/app/views/dashboard/guilds/shared/_jobs_search.html.slim
+++ b/app/views/dashboard/guilds/shared/_jobs_search.html.slim
@@ -5,14 +5,16 @@ div class="guild-jobs-stats_container mb-1"
                 <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Search open or closed jobs.">help_outline</i>
 div class="guild_jobs-search-container"
     div class="guild_jobs-search-component"
-        input id="guild_jobs-search-bar"
-        div class="d-flex mt-2"
+        input id="guild_jobs-search-bar" placeholder="Search jobs..."
+        div id="append-to-this"
+        div class="d-flex mt-2" id="guilds_jobs-source-control"
             div class="custom-control custom-radio"
-                input type="radio" id="customRadio1" name="customRadio" class="custom-control-input"
-                label class="custom-control-label" for="customRadio1" Open
+                input type="radio" id="open-jobs" name="guild-jobs" class="custom-control-input" value="open" checked="true"
+                label class="custom-control-label" for="open-jobs" Open
             div class="custom-control custom-radio ml-2"
-                input type="radio" id="customRadio2" name="customRadio" class="custom-control-input"
-                label class="custom-control-label" for="customRadio2" Closed
+                input type="radio" id="closed-jobs" name="guild-jobs" class="custom-control-input" value="closed"
+                label class="custom-control-label" for="closed-jobs" Closed
+
 
 div class="chart-status_bubbles" id="chart-status_guild-hires-years"
     div class="chart-status_bubble chart-status_bubble-1"
