change update method for individual guilds page

--- a/app/views/dashboard/guilds/shared/_percent-of-jobs-gauge.html.slim
+++ b/app/views/dashboard/guilds/shared/_percent-of-jobs-gauge.html.slim
@@ -3,3 +3,12 @@ div class="gauge-container d-flex justify-content-center mt-5"
     div class="gauge-inner"
     div class="gauge-outer-over gauge-outer" id="gauge-outer-over_jobs-percent" data-ratio="#{percent_of_open_jobs_for_department_data(@current_guild)[:decimal]}"
     div class="gauge-data" id="gauge-data_jobs_percent" #{percent_of_open_jobs_for_department_data(@current_guild)[:percent]} %
+    
+div class="container mt-4"
+    div class="row"
+        div class="col-12 col-sm-6 text-center border-right border-top pt-3 offer-acceptance-ratio-info--left"
+            p id="offer-acceptance-ratio_year-month--offers-sent" class="font-weight-bold" #{percent_of_open_jobs_for_department_data(@current_guild)[:total]}
+            p class="font-weight-normal" Total live jobs  
+        div class="col-12 col-sm-6 text-center border-top pt-3"
+            p id="offer-acceptance-ratio_year-month--offers-accepted" class="font-weight-bold" #{percent_of_open_jobs_for_department_data(@current_guild)[:department]}
+            p class="font-weight-normal" #{@current_guild == 'Customer Experience' ? 'CX' : @current_guild} jobs
