style update button and bubbles

--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -142,3 +142,10 @@
 .guild_update-section-container{
     width: fit-content;
 }
+
+.guild_update-bubbles{
+    display: flex;
+    height: 1rem;
+    justify-content: center;
+    margin-top: 2rem;
+}
