--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -1,13 +1,13 @@
 div id="dashboard_individual-guild-page" data-guild="#{@current_guild}" data-updating="#{render_updating_state}"
     div class="guilds-tab_header-container"
         h3 class="dashboard_content-header" #{@current_guild}
-    div class="guild_page-control-container mb-5"
+    div class="guild_page-control-container mb-4"
         div class="container-fluid px-0"
             div class="row"
-                div class="col-4 d-flex align-items-center"
+                div class="col-12 col-sm-4 d-flex align-items-center"
                     a href="/dashboard/guilds" class='guilds_back-button' 
                         i class="material-icons guilds_back-button-icon" keyboard_return
-                div class="col-8 d-flex justify-content-end"
+                div class="col-12 col-sm-8 d-flex justify-content-end"
                     div class="guild_update-section-container"
                         div class="d-flex"
                             div class="guild_last-updated-text-container"
@@ -15,10 +15,12 @@ div id="dashboard_individual-guild-page" data-guild="#{@current_guild}" data-upd
                                 p id="guilds_last-updated-date" data-last-updated="#{UiHelper.find_by(name: 'Departments').last_updated.localtime}" #{render_last_updated_date_for_guilds}
                             div class="mt-1"
                                 button id="guilds_update-button" class="btn btn-primary button--submit ml-3" update
-                        div class="chart-status_bubbles" id="chart-status_percent-of-jobs"
-                            div class="chart-status_bubble chart-status_bubble-1"
-                            div class="chart-status_bubble chart-status_bubble-2"
-                            div class="chart-status_bubble chart-status_bubble-3"
+            div class="row"
+                div class="col-12" 
+                    div class="guild_update-bubbles" id="chart-status_guild-page-update"
+                        div class="chart-status_bubble chart-status_bubble-1"
+                        div class="chart-status_bubble chart-status_bubble-2"
+                        div class="chart-status_bubble chart-status_bubble-3"
 
 
     div class="mb-4"
