--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -32,6 +32,8 @@
 
 .guild_page-control-container{
     margin-bottom: 1.4rem;
+    background-color: white;
+    padding: 1rem 0;
 }
 
 .guilds_back-button{
@@ -41,7 +43,7 @@
     width: fit-content;
     // background-color: map-get($plated-secondary-palette, 'blueberry-pie');
     background-color: white;
-    padding: .3rem 1.4rem;
+    padding: .4rem 2rem;
     color: black;
     // text-transform: uppercase;
     // letter-spacing: .1rem;
@@ -49,7 +51,7 @@
 }
 
 .guilds_back-button-icon{
-    font-size: 1.7rem;
+    font-size: 2rem;
     font-weight: 580;
 }
 
@@ -140,6 +142,11 @@
 }
 
 .guild_update-section-container{
+    background-color: white; 
+    padding: 0 2rem !important;
+}
+
+.guild_update-section{
     width: fit-content;
 }
 
@@ -147,5 +154,21 @@
     display: flex;
     height: 1rem;
     justify-content: center;
-    margin-top: 2rem;
+    margin-right: 2rem;
+}
+
+.guild_last-updated-text-container{
+    font-weight: 300;
+    font-size: .9rem;
+}
+
+.guild_update-bubbles-container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+
+.guilds_update-button-container{
+    margin-top: .15rem !important;
 }
