--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -12,12 +12,9 @@ html
     
     div class="dashboard"
         = render "shared/sidebar"
-        div class="dashboard_content" 
+        div class="dashboard_content-section" 
             = render "shared/update_notification"
-            button data-toggle="collapse" data-target="#collapsed-menu" class="dashboard_toggle-menu-button btn btn-primary"
-                i class="fas fa-bars" 
-            div class="collapse" id="collapsed-menu"
-                p Test1 
+            = render "shared/mobile-menu"
             = yield
 
     = render 'pusher/config'
