add mobile menu toggle icon

--- a/app/views/shared/_mobile-menu.html.slim
+++ b/app/views/shared/_mobile-menu.html.slim
@@ -1,4 +1,8 @@
 div class="dashboard_mobile-menu-container"
-    button data-toggle="collapse" data-target="#collapsed-menu" class="dashboard_toggle-menu-button btn btn-primary"
+    div class="d-flex align-items-center"
+        h3 id="dashboard_mobile-menu-title" Tad.
+        button data-toggle="collapse" data-target="#collapsed-menu" class="dashboard_toggle-mobile-menu-button material-icons"  keyboard_arrow_down
     div class="collapse" id="collapsed-menu"
         p Test1 
+
+
