--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -64,6 +64,30 @@
     font-weight: 600 !important;
 }
 
+#dashboard_mobile-menu-title{
+    font-family: $font-family-serif;
+    font-weight: 700;
+    color: white;
+    margin: 0;
+}
+
+.dashboard_toggle-mobile-menu-button{
+    width: fit-content;
+    padding: 0;
+    margin-left: 1rem;
+    background-color: transparent;
+    border: none;
+    color: white;
+}
+
+.dashboard_toggle-mobile-menu-button:focus{
+    outline: 0;
+}
+
+.dashboard_toggle-mobile-menu-button:hover{ 
+    cursor: pointer;
+}
+
 // hide sidebar, expand content area, and show menu toggle button
 @include media-breakpoint-down(md){
     #sidebar{
@@ -72,7 +96,7 @@
 
     .dashboard_content-section{
         width: 100%;
-        padding: 7rem 2rem 2rem 2rem;
+        padding: 7.5rem 2rem 2rem 2rem;
     } 
     
     .dashboard_mobile-menu-container{
