--- a/app/views/shared/_mobile-menu.html.slim
+++ b/app/views/shared/_mobile-menu.html.slim
@@ -1,7 +1,7 @@
 div class="dashboard_mobile-menu-container"
     div class="d-flex align-items-center"
         h3 id="dashboard_mobile-menu-title" Tad.
-        button data-toggle="collapse" data-target="#collapsed-menu" class="dashboard_toggle-mobile-menu-button material-icons"  keyboard_arrow_down
+        button data-toggle="collapse" data-closed=1 data-target="#collapsed-menu" class="material-icons" id="dashboard_toggle-mobile-menu-button" keyboard_arrow_down
     div class="collapse" id="collapsed-menu"
         p Test1 
 
