--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -78,7 +78,7 @@
     background-color: transparent;
     border: none;
     color: white;
-    transition: all 0.5s;
+    transition: all 0.3s;
 }
 
 #dashboard_toggle-mobile-menu-button:focus{
@@ -87,6 +87,45 @@
 
 #dashboard_toggle-mobile-menu-button:hover{ 
     cursor: pointer;
+}
+
+.collapsed-menu_nav-links{
+    list-style-type: none;
+    color: white;
+    display: flex;
+    margin: 1.5rem 0 .2rem 0;
+    padding: 0;
+    font-size: .95rem;
+}
+
+.collapsed-menu_nav-links a{
+    color: white;
+}
+
+.collapsed-menu_nav-links .current{
+    border-bottom: .2rem solid white;
+}
+
+.collapsed-menu_nav-link:nth-of-type(2){
+    margin: 0 1.2rem;
+}
+
+.collapsed-menu_nav-link{
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    width: fit-content;
+    box-sizing: border-box;
+    // height: 2rem;
+}
+
+.collapsed-menu_signout{
+    background-color: transparent;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    font-weight: 425;
+    color: white; 
+    border: 0;
+    width: fit-content;
 }
 
 // hide sidebar, expand content area, and show menu toggle button
