--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -1,5 +1,5 @@
 div id="dashboard_individual-guild-page" data-guild="#{@current_guild}" data-updating="#{render_updating_state}"
-    div class="guilds-tab_header-container"
+    div class="guilds-page_header-container mb-1"
         h3 class="dashboard_content-header" #{@current_guild}
     div class="guild_page-control-container mb-4"
         div class="container-fluid px-0 "
