--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -17,6 +17,7 @@
     align-items: center;
     border: .156rem solid #eaeaea;
     color: black;
+    margin-bottom: .6rem;
     transition: border 150ms ease-in,
                 color 150ms ease-in ;
 }
