--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -3,17 +3,13 @@ div id="dashboard_guilds-tab"
         h3 class="dashboard_content-header" Overview
     div class="container-fluid px-0"
         div class="row no-gutters"
-            div class="col-12 col-md-4 dashboard_content-container--focal-left"
-                div style="height:100%"
-                    div class="dashboard_content-header-container mb-1"
-                        h4 class="dashboard_content-header" Guilds
-                    div class="dashboard_focal-content-container"
+            div class="col-12 col-md-4"
+                    div class="dashboard_focal-content-container focal-left"
+                        h4 class="dashboard_content-header mb-5" Guilds
                         = render 'dashboard/guilds/guilds-buttons-list'
             div class="col-12 col-md-8"
-                div style="height:100%"
-                    div class="dashboard_content-header-container mb-1"
-                        h4 class="dashboard_content-header" Hires by guild
                     div class="dashboard_focal-content-container" 
+                        h4 class="dashboard_content-header mb-5" Hires by guild
                         = render 'dashboard/guilds/hires-by-guild-control'
                         = render 'dashboard/guilds/hires-by-guild'
                         = render 'dashboard/guilds/hires-by-guild-date'
