--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -178,3 +178,14 @@
 .guilds_update-button-container{
     margin-top: .15rem !important;
 }
+
+
+input[type="search"] {
+    background-color: white;
+    border: .06rem solid rgb(214, 214, 214);
+}
+
+select{
+    border-radius: 0;
+}
+
