add hires by source for guild method

--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -225,3 +225,7 @@ table#days-to-hire-table th{
 #days-to-hire-table_info{
     margin-top: 1rem
 }
+
+#days-to-hire-table{
+    border-bottom: .1rem solid #d8d8d8
+}
