--- a/app/views/dashboard/guilds/shared/_percent-of-jobs-tooltip.html.slim
+++ b/app/views/dashboard/guilds/shared/_percent-of-jobs-tooltip.html.slim
@@ -1,5 +1,5 @@
 div class="container-fluid mb-3 px-0"
     div class="row"
         div class="col-12 col-sm-2"
-            <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Percent of live jobs">help_outline</i>
+            <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Percent of live jobs.">help_outline</i>
 
