refactor overview/hires

--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -3,4 +3,9 @@
     text-transform: uppercase;
     font-weight: 400;
     letter-spacing: .1rem;
+    font-size: .9rem;
+}
+
+.button--select{
+    font-size: .9rem;
 }
