--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
 
 @import 'custom';
 @import 'bootstrap';
-@import 'buttons';
+@import 'button';
 @import 'forms';
 @import 'dashboard';
 @import 'sidebar';
@@ -29,4 +29,5 @@
 @import 'charts';
 @import 'tables';
 @import 'guilds-tab';
+@import 'text'
 
