--- a/app/views/dashboard/overview/hires/_hires-by-years-control.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-by-years-control.html.slim
@@ -1,13 +1,12 @@
-/ = form_tag(charts_overview_change_years_graph_settings_path, remote: true) do 
 form id="years-hires_form"
     div class="container-fluid mb-3 px-0"
         div class="row"
             div class="col-12 col-sm-2"
-                <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year.">help_outline</i>
+                i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year." help_outline
             div class="col-12 col-sm-10 d-flex justify-content-end"
                 div class="dropdown ml-2"
-                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
-                    div class="dropdown-menu dropdown-menu-right"
+                    button class="btn btn-outline-secondary dropdown-toggle button--select" data-toggle="dropdown" Years
+                    div class="dropdown-menu dropdown-menu-right text--sans-serif-small"
                         - get_years.each do |year| 
                             div class="dropdown-item"
                                 div class="custom-control custom-checkbox"
